<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/navy_blue"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_back"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_shape"
            android:drawableRight="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:padding="10dp"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_shape"
            android:drawableRight="@drawable/ic_padlock"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"

                android:text="@string/forget"
                android:textColor="@color/blue"
                android:textSize="15dp"
                android:textStyle="bold" />
        </LinearLayout>



<!--        <android.widget.Button-->
<!--            android:id="@+id/loginbtn"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:layout_width="200dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:background="@drawable/rectangle_login"-->
<!--            android:text="Login"-->
<!--            android:textColor="@color/white">-->

<!--        </android.widget.Button>-->

        <LinearLayout
            android:id="@+id/loginLL"
            android:layout_width="200dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectange_box"
            android:onClick="onLoginClicked"
            android:orientation="horizontal"
            android:backgroundTint="@color/blue"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/circularProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>

